--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "dotenv": "^16.4.1",
+    "iconv-lite": "^0.6.3",
     "moment": "^2.30.1",
     "node-telegram-bot-api": "^0.64.0",
     "pdfkit": "^0.14.0"
