--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
+    "canvas": "^2.11.2",
     "dotenv": "^16.4.5",
     "iconv-lite": "^0.6.3",
     "moment": "^2.30.1",
