--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "iconv-lite": "^0.6.3",
     "moment": "^2.30.1",
+    "mysql2": "^3.11.3",
     "node-telegram-bot-api": "^0.64.0",
     "pdfkit": "^0.14.0"
   },
