--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.6.7",
     "canvas": "^2.11.2",
     "dotenv": "^16.4.5",
+    "exceljs": "^4.4.0",
     "iconv-lite": "^0.6.3",
     "moment": "^2.30.1",
     "mysql2": "^3.11.3",
+    "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.64.0",
     "pdfkit": "^0.14.0"
   },
